infra/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    env: test
    app.kubernetes.io/part-of: platform
  annotations: {}

---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: prod
    app.kubernetes.io/part-of: platform
  annotations: {}
